...
        }}
      />

      <Tabs.Screen
        name="profile"
        options={{
          title: "Perfil",
          tabBarIcon: ({ color }) => (
            <FontAwesome size={28} name="user" color={color} />
          ),
          href: user ? "profile" : null,
        }}
      />

      <Tabs.Screen
        name="auth"
        options={{
          title: "Entrar / Cadastrar",
          tabBarIcon: ({ color }) => (
            <FontAwesome size={28} name="user" color={color} />
          ),
          href: !user ? "/auth" : null,
        }}
      />
...
